crates/herder-tui/src/views/snapshots/herder_tui__views__tests__accounts_120x40.snap
---
source: crates/herder-tui/src/views/tests.rs
expression: "render(app, width, height).backend()"
---
" ‹ back  herder                                                                                              inbox 0  + "
"┌ accounts ────────────────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│ ● box  connected · pinned                                                                                            │"
"│   Main  claude · claude-main · 4 sessions                                                                            │"
"│     Session         █████████████░░░░░░░░░░░░░░░░░   42%  resets in 2h 13m                                           │"
"│     Weekly          ██████████████████████░░░░░░░░   74%  resets in 5d 3h                                            │"
"│     Weekly · Fable  ████████████████████████████░░   93%  resets in 5d 3h                                            │"
"│   Work  claude · claude-work · failover                                                                              │"
"│     no usage reported yet                                                                                            │"
"│   codex  codex                                                                                                       │"
"│     Session  ██░░░░░░░░░░░░░░░░░░░░░░░░░░░░    8%  resets in 40m                                                     │"
"│     Weekly   ██████░░░░░░░░░░░░░░░░░░░░░░░░   20%  resets in 1d 0h                                                   │"
"│ ✗ laptop  connection refused                                                                                         │"
"│   no accounts: n adds one                                                                                            │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│ A session whose account hits a limit moves to an account marked failover of the same provider, on the same model,    │"
"│ unless sessions are pinned. Both are set in the machine's daemon config (failover = true per account, [failover]     │"
"│ pin).                                                                                                                │"
"└───────────────────────────────── j/k move  n add an account  r reconnect  Esc close ─────────────────────────────────┘"
" ● box connected  ✗ laptop connection refused                                                            ? help  q quit "
