crates/herder-tui/src/views/snapshots/herder_tui__views__tests__accounts_160x40.snap
---
source: crates/herder-tui/src/views/tests.rs
expression: terminal.backend()
---
" herder        inbox 0 « │ accounts                                                                                                    rotates on a limit only  "
"                         │                                                                                                                                      "
" machines     by machine │   ● box                                                                                                            sessions pinned   "
"  ◉ box                1 │ ▶   Main  claude · claude-main                                                                                          4 sessions   "
"▶   ├ ◉ app · api        │       Session         ━━━━━━━━━━━━━━━━━━━━━━━━  42%  resets in 2h 13m                                                                "
"    │ ├ ● write the tes… │       Weekly          ━━━━━━━━━━━━━━━━━━━━━━━━  74%  resets in 5d 3h                                                                 "
"    │ └ ✗ document it    │       Weekly · Fable  ━━━━━━━━━━━━━━━━━━━━━━━━  93%  resets in 5d 3h                                                                 "
"    └ ○ app · fix-login  │     Work  claude · claude-work                                                                                                       "
"  · laptop       offline │       no usage reported yet                                                                                                          "
"                         │     codex  codex                                                                                                                     "
" ─────────────────────── │       Session         ━━━━━━━━━━━━━━━━━━━━━━━━   8%  resets in 40m                                                                   "
" attention      priority │       Weekly          ━━━━━━━━━━━━━━━━━━━━━━━━  20%  resets in 1d 0h                                                                 "
"  ◉ api · app · box      │   also on laptop: cursor                                                                                                             "
"  ✗ document it · app    │                                                                                                                                      "
"  ● write the tests      │   ✗ laptop                                                                                                      connection refused   "
"                         │     Cursor  cursor · cursor                                                                                                          "
"                         │       no usage reported yet                                                                                                          "
"                         │   also on box: claude                                                                                                                "
"                         │   also on box: codex                                                                                                                 "
"                         │                                                                                                                                      "
"                         │  A session whose account hits a limit rotates to the account of the same provider with the most room left, on the same model,        "
"                         │  unless sessions are pinned. Pinning is set in the machine's daemon config ([failover] pin).                                         "
"                         │                                                                                                                                      "
"                         │                                                                                                                                      "
"                         │                                                                                                                                      "
"                         │                                                                                                                                      "
"                         │                                                                                                                                      "
"                         │                                                                                                                                      "
"                         │                                                                                                                                      "
"                         │                                                                                                                                      "
"                         │                                                                                                                                      "
"                         │                                                                                                                                      "
"                         │                                                                                                                                      "
"                         │                                                                                                                                      "
"                         │                                                                                                                                      "
"                         │                                                                                                                                      "
" ─────────────────────── │                                                                                                                                      "
" + new            ≡ menu │                                                                                                                                      "
"─────────────────────────┴───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────── "
" j/k move  n add account  l log in again  r reconnect  esc back                                                                                ● box  ✗ laptop  "
