crates/herder-tui/src/views/snapshots/herder_tui__views__tests__an_approval_is_prompted_and_badged.snap
---
source: crates/herder-tui/src/views/tests.rs
expression: terminal.backend()
---
" box › app · herder/api                                                                 inbox 2  +  "
"┌ sessions ─────────────────────┐ ┃                                                                 "
"│● box (4)                      │ ┃ Clean the build.                                                "
"│ approve?  ▾ app · herder/… (2)│ ┃                                                                 "
"│ running   └ write the tests   │                                                                   "
"│ error     └ document it       │                                                                   "
"│ idle      app · herder/fix-lo…│                                                                   "
"│                               │                                                                   "
"│                               │                                                                   "
"│                               │                                                                   "
"│                               │                                                                   "
"│                               │                                                                   "
"│                               │ ┃                                                                 "
"│                               │ ┃ △ approval · tool                      +1 more · asked 0s ago   "
"│                               │ ┃ Bash: rm -rf target                                             "
"│                               │ ┃                                                                 "
"│                               │ ┃  allow    deny          y allow · n deny · ←/→ enter · f full   "
"│                               │ ┃                                                                 "
"└───────────────────────────────┘   ⠋ working · 0s  ctrl+c stop                                     "
" 2 waiting on you · I inbox  i write  [ ] items  e expand  c copy  ? help          ● box connected  "
