crates/herder-tui/src/views/snapshots/herder_tui__views__tests__an_approval_on_a_narrow_screen_answers_without_esc.snap
---
source: crates/herder-tui/src/views/tests.rs
expression: "render(&mut app, 45, 40).backend()"
---
" < back  box > app - api         inbox 1  +  "
"┌──────────────────────────────────────────┐ "
"│  - approval needed: Bash: rm -rf target  │ "
"│                                          │ "
"│                                          │ "
"│                                          │ "
"│                                          │ "
"│                                          │ "
"│                                          │ "
"│                                          │ "
"│                                          │ "
"│                                          │ "
"│                                          │ "
"│                                          │ "
"│                                          │ "
"│                                          │ "
"│                                          │ "
"│                                          │ "
"│                                          │ "
"│                                          │ "
"│                                          │ "
"│                                          │ "
"│                                          │ "
"│                                          │ "
"│                                          │ "
"│                                          │ "
"│                                          │ "
"│                                          │ "
"│                                          │ "
"│                                          │ "
"│                                          │ "
"│                                          │ "
"└──────────────────────────────────────────┘ "
"│ ^ approval - Bash                          "
"│ rm -rf target                              "
"│                                            "
"│   allow      deny                          "
"│                                            "
" y allow   n deny   i write   ^c stop        "
" 1 waiting - I  ? help                * box  "
