crates/herder-tui/src/views/snapshots/herder_tui__views__tests__approval_100x30.snap
---
source: crates/herder-tui/src/views/tests.rs
expression: "render(&mut app, width, height).backend()"
---
" herder        inbox 2 « │  chat   tasks 2   prs 1   term          claude-main · claude-opus · ask  "
"                         │                                                                          "
" projects     by project │ ┌ resources ──────────────────────────────────────────────────────────┐  "
"  ◉ app                2 │ │ cpu 12% · mem 768 MiB · 3 processes                                 │  "
"▶   ├ ◉ api          1 ! │ │ ● app-db-1 running · postgres:16                                    │  "
"    │ ├ ● write tests    │ │ ○ app-web-1 exited · node:22                                        │  "
"    │ └ ◉ docs         ? │ │ :down brings app down                                               │  "
"    └ ✓ fix-login        │ └─────────────────────────────────────────────────────────────────────┘  "
"  ● herder               │     + Thought: Where the router lives.                                   "
"    └ ● p2d-1-design     │                                                                          "
"  ○ infra                │  ┃                                                                       "
"    └ ○ k3s              │  ┃ $ cargo test --workspace                                              "
"                         │  ┃ running 12 tests                                                      "
" ─────────────────────── │  ┃ test health::ok ... ok                                                "
" attention      priority │  ┃                                                                       "
"  ◉ api · app · box      │  ┃ test result: ok                                                       "
"  ◉ docs · app · box     │  ┃                                                                       "
"  ✓ fix-login · app      │                                                                          "
"  ● write tests · app    │     I added GET /health; it returns 200 with the build version so        "
"  ● p2d-1-design         │     load balancers can probe it.                                         "
"                         │                                                                          "
"                         │  ┃                                                                       "
"                         │  ┃ △ approval · tool                            asked 497509h 32m ago    "
"                         │  ┃ rm -rf target/                                                        "
"                         │  ┃                                                                       "
"                         │  ┃  allow    deny               y allow · n deny · ←/→ enter · f full    "
" ─────────────────────── │  ┃                                                                       "
" + new            ≡ menu │    ⠏ working · 497509h 32m                          claude-main 5h 38%   "
"─────────────────────────┴───────────────────────────────────────────────────────────────────────── "
"  APPROVAL   ◉ 2 waiting  y allow  n deny  esc navigate  ctrl+x leader                 ● box  ● m2  "
