crates/herder-tui/src/views/snapshots/herder_tui__views__tests__approval_120x40.snap
---
source: crates/herder-tui/src/views/tests.rs
expression: terminal.backend()
---
" box › app · herder/api                                                                                     inbox 1  +  "
"┌ sessions ───────────────────────────┐┌ app · herder/api needs you ───────────────── claude-main · claude-opus · ask ┐ "
"│● box (4)                            ││you                                                                           │ "
"│ approve?  ▾ app · herder/api (2)    ││  Clean the build.                                                            │ "
"│ running   └ write the tests         ││  · approval needed: Bash: rm -rf target/                                     │ "
"│ error     └ document it             ││                                                                              │ "
"│ idle      app · herder/fix-login    ││                                                                              │ "
"│                                     ││                                                                              │ "
"│                                     ││                                                                              │ "
"│                                     ││                                                                              │ "
"│                                     ││                                                                              │ "
"│                                     ││                                                                              │ "
"│                                     ││                                                                              │ "
"│                                     ││                                                                              │ "
"│                                     ││                                                                              │ "
"│                                     ││                                                                              │ "
"│                                     ││                                                                              │ "
"│                                     ││                                                                              │ "
"│                                     ││                                                                              │ "
"│                                     ││                                                                              │ "
"│                                     ││                                                                              │ "
"│                                     ││                                                                              │ "
"│                                     ││                                                                              │ "
"│                                     ││                                                                              │ "
"│                                     ││                                                                              │ "
"│                                     ││                                                                              │ "
"│                                     ││                                                                              │ "
"│                                     ││                                                                              │ "
"│                                     ││                                                                              │ "
"│                                     ││                                                                              │ "
"│                                     ││                                                                              │ "
"│                                     ││                                                                              │ "
"│                                     ││                                                                              │ "
"│                                     │└──────────────────────────────────────────────────────────────────────────────┘ "
"│                                     │┃ △ approval · Bash                                                              "
"│                                     │┃ rm -rf target/                                                                 "
"│                                     │┃                                                                                "
"│                                     │┃   allow      deny                                             y allow  n deny  "
"└─────────────────────────────────────┘┃                                                                                "
" 1 waiting on you · I inbox  ? help  q quit                                                            ● box connected  "
