crates/herder-tui/src/views/snapshots/herder_tui__views__tests__approval_45x30.snap
---
source: crates/herder-tui/src/views/tests.rs
expression: "render(&mut app, width, height).backend()"
---
" ! api - app - box             1/6  | switch "
" ! 2 need you  * 2  v 1             |    !   "
"                                             "
" resources                                   "
" cpu 12% - mem 768 MiB - 3 processes         "
" * app-db-1 running                          "
" o app-web-1 exited                          "
" :down brings app down                       "
"                                             "
"                                             "
" | Add a health endpoint and test it.        "
"                                             "
"    + Thought: Where the router lives.       "
"                                             "
" | $ cargo test --workspace                  "
" | running 12 tests                          "
" | test health::ok ... ok                    "
" |                                           "
" | test result: ok                           "
"                                             "
"    I added GET /health; it returns 200      "
"    with the build version so load           "
"    balancers can probe it.                  "
"                                             "
" | ^ approval - tool                0s ago   "
" | rm -rf target/                            "
" |                                           "
" |  allow    deny         y allow - n deny   "
"   | working - 0s                    5h 38%  "
" y allow   n deny   i write   < back         "
