crates/herder-tui/src/views/snapshots/herder_tui__views__tests__approval_45x40.snap
---
source: crates/herder-tui/src/views/tests.rs
expression: terminal.backend()
---
" < back  box > app - api         inbox 1  +  "
"┌──────────────────────────────────────────┐ "
"│you                                       │ "
"│  Clean the build.                        │ "
"│  - approval needed: Bash: rm -rf target/ │ "
"│                                          │ "
"│                                          │ "
"│                                          │ "
"│                                          │ "
"│                                          │ "
"│                                          │ "
"│                                          │ "
"│                                          │ "
"│                                          │ "
"│                                          │ "
"│                                          │ "
"│                                          │ "
"│                                          │ "
"│                                          │ "
"│                                          │ "
"│                                          │ "
"│                                          │ "
"│                                          │ "
"│                                          │ "
"│                                          │ "
"│                                          │ "
"│                                          │ "
"│                                          │ "
"│                                          │ "
"│                                          │ "
"│                                          │ "
"│                                          │ "
"└──────────────────────────────────────────┘ "
"│ ^ approval - Bash                          "
"│ rm -rf target/                             "
"│                                            "
"│   allow      deny                          "
"│                                            "
" y allow   n deny   i write   ^c stop        "
" 1 waiting - I  ? help                * box  "
