crates/herder-tui/src/views/snapshots/herder_tui__views__tests__board_100x30.snap
---
source: crates/herder-tui/src/views/tests.rs
expression: terminal.backend()
---
" herder        inbox 0 « │ board · 9 sessions · 6 to act on                        attention first  "
"                         │                                                                          "
" machines     by machine │   ◉ needs you               app · ask-port                         box   "
"  ◉ box                1 │ ▶ ✗ CI failed          #21  app · health                           box   "
"▶   ├ ○ app · logs       │   ✗ changes requested  #22  app · login                            box   "
"    ├ ○ app · metrics    │   ✗ conflicting        #23  app · schema                           box   "
"    ├ ● app · cache      │   ✓ ready to merge     #24  app · docs                          laptop   "
"    ├ ○ app · spike      │   ○ idle, no PR             app · spike                            box   "
"    ├ ○ app · schema     │   ● working            #25  app · cache                            box   "
"    ├ ○ app · login      │   ◌ waiting on CI      #26  app · metrics                          box   "
"    ├ ○ app · health     │   ○ merged             #27  app · logs                             box   "
"    └ ◉ app · ask-port   │                                                                          "
"  ○ laptop               │                                                                          "
"    ├ → app · gone       │                                                                          "
"    └ ○ app · docs       │                                                                          "
" 1 archived       H show │                                                                          "
"                         │                                                                          "
" ─────────────────────── │                                                                          "
" attention      priority │                                                                          "
"  ◉ ask-port · app · box │                                                                          "
"  ● cache · app · box    │                                                                          "
"                         │                                                                          "
"                         │                                                                          "
"                         │                                                                          "
"                         │                                                                          "
"                         │                                                                          "
" ─────────────────────── │                                                                          "
" + new            ≡ menu │                                                                          "
"─────────────────────────┴───────────────────────────────────────────────────────────────────────── "
"  NAVIGATE   j/k move  enter open  esc back                                        ● box  ● laptop  "
